6 October updates Round 1

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
+<!-- This is the "Responsive" version for Homework #2 -->
 <head>
   <meta charset="UTF-8">
   <title>Steve Hulme's Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
   <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/style.css"> 
 </head>
@@ -30,12 +32,8 @@
 					 <p>
 					     On a spring day in 1992 I stood in the main plaza of the Javits Center in Manhattan. Harvey, my boss, and I were waiting in the ticket line to enter the Unix Expo. Harvey held the Exhibitors list in his hand. "Look at this, Steve -- everybody here is talking about the Internet. I think we need to get on this train!"  When we got home, I bought a server and set up our web site, working from an O'Reilly book. A year later I built an online information service, from scratch -- learning perl from the O'Reilly "llama" book as I went.
 					</p>
-					<p>
-					     Twenty five years later, I still love to use technology to solve business problems.  There are few careers that offer such an outlet for creativity; that allow one to conceive an idea and build it out quickly. I've been fortunate in this career -- fascinating work and good people to work with.
-					</p>
-					<p>
-					     After working for large companies ever since I joined Netscape in 1997, it's time to build my own enterprise. Over the next year I'm learning the modern full-stack development tools through the UNC Coding Bootcamp. I'll use them to prototype my ideas.  I'm grateful to have this opportunity and am looking forward, as always, to building something new.
-					</p>
+					
+					
 				</div>
 			<section class="sidebar">
 	      		<div id="connect">
