--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Steve Hulme's Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+  <title>Steve Hulme's Responsive Portfolio</title>
   <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/style.css"> 
 </head>
@@ -31,21 +32,18 @@
 					<h2>Contact</h2>
 					<form id="my-contact-form">
 						<ul>
-						<li><label for="fullname">Name</label>
-  							<input type="text" id="fullname" name="fullname" placeholder="Your Name Here" required="required">
-  						</li>
-  						<li><label for="email-address">Email</label>
-  							<input type="email" id="email-address" name="email-address" placeholder="example@gmail.com" required="required">
-  						</li>
-  						<li><label for="your-text">Message</label>
-            				<textarea id="message" name="message" required="required" placeholder="Your message here"></textarea>
-          				</li>
-          				<input type="Submit" name="Submit" value="Submit">
+							<li><label for="fullname">Name</label>
+	  							<input type="text" id="fullname" name="fullname" placeholder="Your Name Here" required="required">
+	  						</li>
+	  						<li><label for="email-address">Email</label>
+	  							<input type="email" id="email-address" name="email-address" placeholder="example@gmail.com" required="required">
+	  						</li>
+	  						<li><label for="your-text">Message</label>
+	            				<textarea id="message" name="message" required="required" placeholder="Your message here"></textarea>
+	          				</li>
+	          				<input type="Submit" name="Submit" value="Submit">
+	          			</ul>
 					</form>
-
-					
-
-
 				</div>
 				<section class="sidebar">
 		      		<div id="connect">
@@ -64,6 +62,7 @@
 		      		</div>
 	    		</section>
 		</div>
+	</div>
 
 		<!-- And now for the footer -->
 		<footer>
