--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <!-- This is the "Responsive" version for Homework #2 -->
 <head>
   <meta charset="UTF-8">
-  <title>Steve Hulme's Portfolio</title>
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+  <title>Steve Hulme's Responsive Portfolio</title>
+
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
   <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/style.css"> 
