--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Steve Hulme's Portfolio</title>
+  <title>Steve Hulme's Responsive Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
   <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/style.css"> 
 </head>
@@ -31,27 +32,27 @@
 					<h2>Portfolio</h2>
 					
 					<div class="portfolio-item">
-						<img src="assets/images/placeholder1.jpeg" alt="Hangman">
+						<img src="assets/images/placeholder1.jpeg" alt="Hangman" class="img-responsive">
 						<h3>Hangman</h3>
 					</div>
 
 					<div class="portfolio-item">
-						<img src="assets/images/placeholder2.jpeg" alt="RPG Game">
+						<img src="assets/images/placeholder2.jpeg" alt="RPG Game" class="img-responsive">
 						<h3>RPG Game</h3>
 					</div>
 
 					<div class="portfolio-item">
-						<img src="assets/images/placeholder3.jpeg" alt="Rutgers Info Widget">
+						<img src="assets/images/placeholder3.jpeg" alt="Rutgers Info Widget" class="img-responsive">
 						<h3>Rutgers Info Widget</h3>
 					</div>
 
 					<div class="portfolio-item">
-						<img src="assets/images/placeholder4.jpeg" alt="Trivia Game">
+						<img src="assets/images/placeholder4.jpeg" alt="Trivia Game" class="img-responsive">
 						<h3>Trivia Game</h3>
 					</div>
 
 					<div class="portfolio-item">
-						<img src="assets/images/placeholder5.jpeg" alt="Rock Paper Scissors">
+						<img src="assets/images/placeholder5.jpeg" alt="Rock Paper Scissors" class="img-responsive">
 						<h3>Rock Paper Scissors</h3>
 					</div>
 
